basic content from business figma plan.
need to add more content for our product steps, social proof and testmonials.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,10 +9,12 @@
 
 // components
 @import "components/nav";
-@import "components/value-prop";
+@import "components/overview";
+@import "components/problem";
 @import "components/social-proof";
 @import "components/product-benefits";
 @import "components/product-features";
 @import "components/testimonials";
 @import "components/cta";
 @import "components/footer";
+@import "components/market";
