--- a/src/styles/components/_overview.scss
+++ b/src/styles/components/_overview.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 1fr);
+  column-gap: 10em;
   row-gap: 0.25em;
   margin-bottom: 2em;
   padding: 2em;
@@ -11,7 +12,7 @@
 
 .main-message {
   grid-column: span 8;
-  grid-row: span 5;
+  grid-row: span 8;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,15 +27,27 @@
   font-size: 1.5rem;
   font-weight: 500;
 }
-
-.main-photo {
-  grid-column: span 8;
-  grid-row: span 3;
+.photo-text {
+  grid-column: span 4;
+  grid-row: span 8;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url("../assets/main-photo.svg") no-repeat top;
+  text-align: left;
+  h1 {
+    margin: 0;
+    padding: 0;
+  }
+}
+.main-photo {
+  grid-column: span 8;
+  grid-row: span 8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url("../assets/import-production.svg") no-repeat top;
   background-size: 100% 100%;
   height: 100%;
   padding: 0;
