--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -35,7 +35,7 @@
 .logo-image {
   width: 2rem;
   height: 1.25rem;
-  background: url("../assets/logo.svg") no-repeat center;
+  background: url("../assets/logo.png") no-repeat center;
   background-size: 100% 100%;
 }
 
@@ -85,7 +85,7 @@
   margin: 0.3em;
 }
 
-@include breakpoint('phone-md') {
+@include breakpoint("phone-md") {
   .backdrop {
     position: absolute;
     height: 100%;
@@ -131,7 +131,7 @@
       a {
         color: $textColor;
       }
-    }    
+    }
   }
 
   .nav-active {
@@ -174,7 +174,7 @@
   }
 }
 
-@include breakpoint('to-tablet-p') {
+@include breakpoint("to-tablet-p") {
   .nav-links {
     width: 60%;
   }
